# django-grocery

./: .env  .gitignore  README.md  compose.yml  manage.py  pyproject.toml
_custom_admin_app/: apps.py  urls.py  views.py
_custom_admin_app/templates/admin/: base_site.html  customer_detail.html  dashboard.html  orders.html  product_detail.html  product_edit.html  products.html
_custom_admin_app/templatetags/: custom_filters.py
cart/: admin.py  models.py
cart/migrations/: 0001_initial.py
custom_admin/: forms.py  serializers.py  urls.py  views.py
custom_admin/management/commands/: seed_data.py
custom_admin/templates/: base.html  brand_create.html  brands.html  categories.html  category_create.html  customer_detail.html  customers.html  dashboard.html  login.html  order_detail.html  orders.html  product_detail.html  product_edit.html  products.html
custom_admin/templates/admin/: base.html  customers.html  dashboard.html  login.html  (+5 more)
custom_admin/templatetags/: custom_filters.py
custom_admin/views/: __init__.py  api_views.py  views.py
customer/: admin.py  models.py  urls.py  views.py
customer/migrations/: 0001_initial.py  0002_rename_name_customer_first_name_customer_last_name.py
grocery_unified/: asgi.py  settings.py  urls.py  wsgi.py
order/: admin.py  apps.py  models.py  signals.py
order/migrations/: 0001_initial.py
product/: admin.py  models.py  serializers.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_brand_product_slug_variant_created_at_variant_image_and_more.py  0003_alter_category_slug.py  0004_alter_category_slug.py
(+1 files in other folders)
