[project]
name = "grocery-unified"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "django-environ>=0.12.0",
    "django-filter>=25.1",
    "django-mptt>=0.17.0",
    "djangorestframework>=3.16.0",
    "faker>=37.4.0",
    "markdown>=3.8.2",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
]
